syntax = "proto3";

package api;

import "google/api/annotations.proto";

service RusProfileService {
  rpc GetCompanyInfo (CompanyRequest) returns (CompanyResponse) {
    option (google.api.http) = {
      get: "/v1/company/{inn}"
    };
  }
}

message CompanyRequest {
  string inn = 1;
}

message CompanyResponse {
  string inn = 1;
  string kpp = 2;
  string name = 3;
  string ceo = 4;
}
